Fix for Safari text weight change when fading in. Forces grayscale antialiasing for webkit so the transition does not trigger a change from subpixel to grayscale antialiasing on transition. See http://stackoverflow.com/questions/11402698/webkit-opacity-transition-issues-with-text

--- a/src/packages/modules/exploded-view-b2-x00/css/exploded-view-b2-x00.scss
+++ b/src/packages/modules/exploded-view-b2-x00/css/exploded-view-b2-x00.scss
@@ -24,6 +24,9 @@ $pieceTeaseStep: 0.4%;
 
 .exploded-view {
 
+  // Fix for Safari font weight changes on transition
+  -webkit-font-smoothing: antialiased;
+
   padding: 0 0 75px;
 
   .scene, .scene-elements {
